core/Grammar.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.1.7 from core/Grammar.y
-----------------------------------------------------------------------------

state 107 contains 10 shift/reduce conflicts.

rule 48 is unused

terminal data is unused
terminal '{' is unused
terminal '}' is unused
terminal tycon is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseHasquelito -> Expr                     (0)
	Expr -> let var '=' Expr in Expr                   (1)
	Expr -> letrec var '=' Expr in Expr                (2)
	Expr -> '(' '\\' var "->" Expr ')' "::" TypeExp "->" TypeExp   (3)
	Expr -> if Expr then Expr else Expr                (4)
	Expr -> var "::" TypeExp '\n' var '=' Expr         (5)
	Expr -> Expr "==" Expr                             (6)
	Expr -> Expr ">=" Expr                             (7)
	Expr -> Expr "<=" Expr                             (8)
	Expr -> Expr "/=" Expr                             (9)
	Expr -> Expr '>' Expr                              (10)
	Expr -> Expr '<' Expr                              (11)
	Expr -> Expr "&&" Expr                             (12)
	Expr -> Expr "||" Expr                             (13)
	Expr -> Expr ':' Expr                              (14)
	Expr -> Expr "++" Expr                             (15)
	Expr -> hd Expr                                    (16)
	Expr -> tl Expr                                    (17)
	Expr -> List                                       (18)
	Expr -> Form                                       (19)
	Form -> Form '+' Form                              (20)
	Form -> Form '-' Form                              (21)
	Form -> Form '*' Form                              (22)
	Form -> Form '/' Form                              (23)
	Form -> Form '^' Form                              (24)
	Form -> Juxt                                       (25)
	Juxt -> Juxt Atom                                  (26)
	Juxt -> quot Atom Atom                             (27)
	Juxt -> rem Atom Atom                              (28)
	Juxt -> '-' Atom                                   (29)
	Juxt -> Atom                                       (30)
	Atom -> '(' Expr ')'                               (31)
	Atom -> int                                        (32)
	Atom -> bool                                       (33)
	Atom -> float                                      (34)
	Atom -> var                                        (35)
	TypeExp -> PrimType                                (36)
	TypeExp -> TypeExp "->" TypeExp                    (37)
	TypeExp -> '(' TypeExp ')'                         (38)
	TypeExp -> '[' TypeExp ']'                         (39)
	TypeExp -> '[' ']'                                 (40)
	PrimType -> Bool                                   (41)
	PrimType -> Int                                    (42)
	PrimType -> Float                                  (43)
	List -> '[' ListMembers ']'                        (44)
	ListMembers ->                                     (45)
	ListMembers -> Atom                                (46)
	ListMembers -> Atom ',' ListMembers                (47)
	RecordTypeFields ->                                (48)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	Int            { INT p }
	Bool           { BOOL p }
	Float          { FLOAT p }
	int            { INTVAL p $$ }
	float          { FLOATVAL p $$ }
	bool           { BOOLVAL p $$ }
	let            { LET p }
	letrec         { LET_REC p }
	in             { IN p }
	if             { IF p }
	then           { THEN p }
	else           { ELSE p }
	data           { DATA p }
	'\\'           { LAMBDA p }
	"->"           { ARROW p }
	"::"           { COLONS p }
	"&&"           { AND p }
	"||"           { OR p }
	'='            { BIND p }
	'+'            { PLUS p }
	'-'            { MINUS p }
	'*'            { TIMES p }
	'/'            { DIVIDE p }
	'^'            { POWER p }
	quot           { QUOT p }
	rem            { REM p }
	"=="           { EQUALS p }
	">="           { GTEQ p }
	"<="           { LTEQ p }
	"/="           { NOTEQ p }
	'>'            { GT' p }
	'<'            { LT' p }
	'('            { LPAREN p }
	')'            { RPAREN p }
	'{'            { LCURL p }
	'}'            { RCURL p }
	var            { VAR p $$ }
	'['            { LBRACK p }
	']'            { RBRACK p }
	':'            { COLON p }
	','            { COMMA p }
	"++"           { PLUSPLUS p }
	hd             { HEAD p }
	tl             { TAIL p }
	tycon          { TYCON p $$ }
	'\n'           { NEWLINE p }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseHasquelito rule  0
	Expr            rules 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19
	Form            rules 20, 21, 22, 23, 24, 25
	Juxt            rules 26, 27, 28, 29, 30
	Atom            rules 31, 32, 33, 34, 35
	TypeExp         rules 36, 37, 38, 39, 40
	PrimType        rules 41, 42, 43
	List            rule  44
	ListMembers     rules 45, 46, 47
	RecordTypeFields rule  48

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parseHasquelito -> . Expr                    (rule 0)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	let            shift, and enter state 2
	letrec         shift, and enter state 11
	if             shift, and enter state 12
	'-'            shift, and enter state 13
	quot           shift, and enter state 14
	rem            shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	'['            shift, and enter state 18
	hd             shift, and enter state 19
	tl             shift, and enter state 20

	Expr           goto state 3
	Form           goto state 4
	Juxt           goto state 5
	Atom           goto state 6
	List           goto state 7

State 1

	Expr -> . let var '=' Expr in Expr                  (rule 1)

	let            shift, and enter state 2


State 2

	Expr -> let . var '=' Expr in Expr                  (rule 1)

	var            shift, and enter state 51


State 3

	%start_parseHasquelito -> Expr .                    (rule 0)
	Expr -> Expr . "==" Expr                            (rule 6)
	Expr -> Expr . ">=" Expr                            (rule 7)
	Expr -> Expr . "<=" Expr                            (rule 8)
	Expr -> Expr . "/=" Expr                            (rule 9)
	Expr -> Expr . '>' Expr                             (rule 10)
	Expr -> Expr . '<' Expr                             (rule 11)
	Expr -> Expr . "&&" Expr                            (rule 12)
	Expr -> Expr . "||" Expr                            (rule 13)
	Expr -> Expr . ':' Expr                             (rule 14)
	Expr -> Expr . "++" Expr                            (rule 15)

	"&&"           shift, and enter state 41
	"||"           shift, and enter state 42
	"=="           shift, and enter state 43
	">="           shift, and enter state 44
	"<="           shift, and enter state 45
	"/="           shift, and enter state 46
	'>'            shift, and enter state 47
	'<'            shift, and enter state 48
	':'            shift, and enter state 49
	"++"           shift, and enter state 50
	%eof           accept


State 4

	Expr -> Form .                                      (rule 19)
	Form -> Form . '+' Form                             (rule 20)
	Form -> Form . '-' Form                             (rule 21)
	Form -> Form . '*' Form                             (rule 22)
	Form -> Form . '/' Form                             (rule 23)
	Form -> Form . '^' Form                             (rule 24)

	in             reduce using rule 19
	then           reduce using rule 19
	else           reduce using rule 19
	"&&"           reduce using rule 19
	"||"           reduce using rule 19
	'+'            shift, and enter state 36
	'-'            shift, and enter state 37
	'*'            shift, and enter state 38
	'/'            shift, and enter state 39
	'^'            shift, and enter state 40
	"=="           reduce using rule 19
	">="           reduce using rule 19
	"<="           reduce using rule 19
	"/="           reduce using rule 19
	'>'            reduce using rule 19
	'<'            reduce using rule 19
	')'            reduce using rule 19
	':'            reduce using rule 19
	"++"           reduce using rule 19
	%eof           reduce using rule 19


State 5

	Form -> Juxt .                                      (rule 25)
	Juxt -> Juxt . Atom                                 (rule 26)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	in             reduce using rule 25
	then           reduce using rule 25
	else           reduce using rule 25
	"&&"           reduce using rule 25
	"||"           reduce using rule 25
	'+'            reduce using rule 25
	'-'            reduce using rule 25
	'*'            reduce using rule 25
	'/'            reduce using rule 25
	'^'            reduce using rule 25
	"=="           reduce using rule 25
	">="           reduce using rule 25
	"<="           reduce using rule 25
	"/="           reduce using rule 25
	'>'            reduce using rule 25
	'<'            reduce using rule 25
	'('            shift, and enter state 25
	')'            reduce using rule 25
	var            shift, and enter state 26
	':'            reduce using rule 25
	"++"           reduce using rule 25
	%eof           reduce using rule 25

	Atom           goto state 35

State 6

	Juxt -> Atom .                                      (rule 30)

	int            reduce using rule 30
	float          reduce using rule 30
	bool           reduce using rule 30
	in             reduce using rule 30
	then           reduce using rule 30
	else           reduce using rule 30
	"&&"           reduce using rule 30
	"||"           reduce using rule 30
	'+'            reduce using rule 30
	'-'            reduce using rule 30
	'*'            reduce using rule 30
	'/'            reduce using rule 30
	'^'            reduce using rule 30
	"=="           reduce using rule 30
	">="           reduce using rule 30
	"<="           reduce using rule 30
	"/="           reduce using rule 30
	'>'            reduce using rule 30
	'<'            reduce using rule 30
	'('            reduce using rule 30
	')'            reduce using rule 30
	var            reduce using rule 30
	':'            reduce using rule 30
	"++"           reduce using rule 30
	%eof           reduce using rule 30


State 7

	Expr -> List .                                      (rule 18)

	in             reduce using rule 18
	then           reduce using rule 18
	else           reduce using rule 18
	"&&"           reduce using rule 18
	"||"           reduce using rule 18
	"=="           reduce using rule 18
	">="           reduce using rule 18
	"<="           reduce using rule 18
	"/="           reduce using rule 18
	'>'            reduce using rule 18
	'<'            reduce using rule 18
	')'            reduce using rule 18
	':'            reduce using rule 18
	"++"           reduce using rule 18
	%eof           reduce using rule 18


State 8

	Atom -> int .                                       (rule 32)

	int            reduce using rule 32
	float          reduce using rule 32
	bool           reduce using rule 32
	in             reduce using rule 32
	then           reduce using rule 32
	else           reduce using rule 32
	"&&"           reduce using rule 32
	"||"           reduce using rule 32
	'+'            reduce using rule 32
	'-'            reduce using rule 32
	'*'            reduce using rule 32
	'/'            reduce using rule 32
	'^'            reduce using rule 32
	"=="           reduce using rule 32
	">="           reduce using rule 32
	"<="           reduce using rule 32
	"/="           reduce using rule 32
	'>'            reduce using rule 32
	'<'            reduce using rule 32
	'('            reduce using rule 32
	')'            reduce using rule 32
	var            reduce using rule 32
	']'            reduce using rule 32
	':'            reduce using rule 32
	','            reduce using rule 32
	"++"           reduce using rule 32
	%eof           reduce using rule 32


State 9

	Atom -> float .                                     (rule 34)

	int            reduce using rule 34
	float          reduce using rule 34
	bool           reduce using rule 34
	in             reduce using rule 34
	then           reduce using rule 34
	else           reduce using rule 34
	"&&"           reduce using rule 34
	"||"           reduce using rule 34
	'+'            reduce using rule 34
	'-'            reduce using rule 34
	'*'            reduce using rule 34
	'/'            reduce using rule 34
	'^'            reduce using rule 34
	"=="           reduce using rule 34
	">="           reduce using rule 34
	"<="           reduce using rule 34
	"/="           reduce using rule 34
	'>'            reduce using rule 34
	'<'            reduce using rule 34
	'('            reduce using rule 34
	')'            reduce using rule 34
	var            reduce using rule 34
	']'            reduce using rule 34
	':'            reduce using rule 34
	','            reduce using rule 34
	"++"           reduce using rule 34
	%eof           reduce using rule 34


State 10

	Atom -> bool .                                      (rule 33)

	int            reduce using rule 33
	float          reduce using rule 33
	bool           reduce using rule 33
	in             reduce using rule 33
	then           reduce using rule 33
	else           reduce using rule 33
	"&&"           reduce using rule 33
	"||"           reduce using rule 33
	'+'            reduce using rule 33
	'-'            reduce using rule 33
	'*'            reduce using rule 33
	'/'            reduce using rule 33
	'^'            reduce using rule 33
	"=="           reduce using rule 33
	">="           reduce using rule 33
	"<="           reduce using rule 33
	"/="           reduce using rule 33
	'>'            reduce using rule 33
	'<'            reduce using rule 33
	'('            reduce using rule 33
	')'            reduce using rule 33
	var            reduce using rule 33
	']'            reduce using rule 33
	':'            reduce using rule 33
	','            reduce using rule 33
	"++"           reduce using rule 33
	%eof           reduce using rule 33


State 11

	Expr -> letrec . var '=' Expr in Expr               (rule 2)

	var            shift, and enter state 34


State 12

	Expr -> if . Expr then Expr else Expr               (rule 4)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	let            shift, and enter state 2
	letrec         shift, and enter state 11
	if             shift, and enter state 12
	'-'            shift, and enter state 13
	quot           shift, and enter state 14
	rem            shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	'['            shift, and enter state 18
	hd             shift, and enter state 19
	tl             shift, and enter state 20

	Expr           goto state 33
	Form           goto state 4
	Juxt           goto state 5
	Atom           goto state 6
	List           goto state 7

State 13

	Juxt -> '-' . Atom                                  (rule 29)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	'('            shift, and enter state 25
	var            shift, and enter state 26

	Atom           goto state 32

State 14

	Juxt -> quot . Atom Atom                            (rule 27)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	'('            shift, and enter state 25
	var            shift, and enter state 26

	Atom           goto state 31

State 15

	Juxt -> rem . Atom Atom                             (rule 28)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	'('            shift, and enter state 25
	var            shift, and enter state 26

	Atom           goto state 30

State 16

	Expr -> '(' . '\\' var "->" Expr ')' "::" TypeExp "->" TypeExp    (rule 3)
	Atom -> '(' . Expr ')'                              (rule 31)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	let            shift, and enter state 2
	letrec         shift, and enter state 11
	if             shift, and enter state 12
	'\\'           shift, and enter state 29
	'-'            shift, and enter state 13
	quot           shift, and enter state 14
	rem            shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	'['            shift, and enter state 18
	hd             shift, and enter state 19
	tl             shift, and enter state 20

	Expr           goto state 28
	Form           goto state 4
	Juxt           goto state 5
	Atom           goto state 6
	List           goto state 7

State 17

	Expr -> var . "::" TypeExp '\n' var '=' Expr        (rule 5)
	Atom -> var .                                       (rule 35)

	int            reduce using rule 35
	float          reduce using rule 35
	bool           reduce using rule 35
	in             reduce using rule 35
	then           reduce using rule 35
	else           reduce using rule 35
	"::"           shift, and enter state 27
	"&&"           reduce using rule 35
	"||"           reduce using rule 35
	'+'            reduce using rule 35
	'-'            reduce using rule 35
	'*'            reduce using rule 35
	'/'            reduce using rule 35
	'^'            reduce using rule 35
	"=="           reduce using rule 35
	">="           reduce using rule 35
	"<="           reduce using rule 35
	"/="           reduce using rule 35
	'>'            reduce using rule 35
	'<'            reduce using rule 35
	'('            reduce using rule 35
	')'            reduce using rule 35
	var            reduce using rule 35
	':'            reduce using rule 35
	"++"           reduce using rule 35
	%eof           reduce using rule 35


State 18

	List -> '[' . ListMembers ']'                       (rule 44)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	'('            shift, and enter state 25
	var            shift, and enter state 26
	']'            reduce using rule 45

	Atom           goto state 23
	ListMembers    goto state 24

State 19

	Expr -> hd . Expr                                   (rule 16)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	let            shift, and enter state 2
	letrec         shift, and enter state 11
	if             shift, and enter state 12
	'-'            shift, and enter state 13
	quot           shift, and enter state 14
	rem            shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	'['            shift, and enter state 18
	hd             shift, and enter state 19
	tl             shift, and enter state 20

	Expr           goto state 22
	Form           goto state 4
	Juxt           goto state 5
	Atom           goto state 6
	List           goto state 7

State 20

	Expr -> tl . Expr                                   (rule 17)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	let            shift, and enter state 2
	letrec         shift, and enter state 11
	if             shift, and enter state 12
	'-'            shift, and enter state 13
	quot           shift, and enter state 14
	rem            shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	'['            shift, and enter state 18
	hd             shift, and enter state 19
	tl             shift, and enter state 20

	Expr           goto state 21
	Form           goto state 4
	Juxt           goto state 5
	Atom           goto state 6
	List           goto state 7

State 21

	Expr -> Expr . "==" Expr                            (rule 6)
	Expr -> Expr . ">=" Expr                            (rule 7)
	Expr -> Expr . "<=" Expr                            (rule 8)
	Expr -> Expr . "/=" Expr                            (rule 9)
	Expr -> Expr . '>' Expr                             (rule 10)
	Expr -> Expr . '<' Expr                             (rule 11)
	Expr -> Expr . "&&" Expr                            (rule 12)
	Expr -> Expr . "||" Expr                            (rule 13)
	Expr -> Expr . ':' Expr                             (rule 14)
	Expr -> Expr . "++" Expr                            (rule 15)
	Expr -> tl Expr .                                   (rule 17)

	in             reduce using rule 17
	then           reduce using rule 17
	else           reduce using rule 17
	"&&"           shift, and enter state 41
	"||"           shift, and enter state 42
	"=="           shift, and enter state 43
	">="           shift, and enter state 44
	"<="           shift, and enter state 45
	"/="           shift, and enter state 46
	'>'            shift, and enter state 47
	'<'            shift, and enter state 48
	')'            reduce using rule 17
	':'            shift, and enter state 49
	"++"           shift, and enter state 50
	%eof           reduce using rule 17


State 22

	Expr -> Expr . "==" Expr                            (rule 6)
	Expr -> Expr . ">=" Expr                            (rule 7)
	Expr -> Expr . "<=" Expr                            (rule 8)
	Expr -> Expr . "/=" Expr                            (rule 9)
	Expr -> Expr . '>' Expr                             (rule 10)
	Expr -> Expr . '<' Expr                             (rule 11)
	Expr -> Expr . "&&" Expr                            (rule 12)
	Expr -> Expr . "||" Expr                            (rule 13)
	Expr -> Expr . ':' Expr                             (rule 14)
	Expr -> Expr . "++" Expr                            (rule 15)
	Expr -> hd Expr .                                   (rule 16)

	in             reduce using rule 16
	then           reduce using rule 16
	else           reduce using rule 16
	"&&"           shift, and enter state 41
	"||"           shift, and enter state 42
	"=="           shift, and enter state 43
	">="           shift, and enter state 44
	"<="           shift, and enter state 45
	"/="           shift, and enter state 46
	'>'            shift, and enter state 47
	'<'            shift, and enter state 48
	')'            reduce using rule 16
	':'            shift, and enter state 49
	"++"           shift, and enter state 50
	%eof           reduce using rule 16


State 23

	ListMembers -> Atom .                               (rule 46)
	ListMembers -> Atom . ',' ListMembers               (rule 47)

	']'            reduce using rule 46
	','            shift, and enter state 82


State 24

	List -> '[' ListMembers . ']'                       (rule 44)

	']'            shift, and enter state 81


State 25

	Atom -> '(' . Expr ')'                              (rule 31)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	let            shift, and enter state 2
	letrec         shift, and enter state 11
	if             shift, and enter state 12
	'-'            shift, and enter state 13
	quot           shift, and enter state 14
	rem            shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	'['            shift, and enter state 18
	hd             shift, and enter state 19
	tl             shift, and enter state 20

	Expr           goto state 28
	Form           goto state 4
	Juxt           goto state 5
	Atom           goto state 6
	List           goto state 7

State 26

	Atom -> var .                                       (rule 35)

	int            reduce using rule 35
	float          reduce using rule 35
	bool           reduce using rule 35
	in             reduce using rule 35
	then           reduce using rule 35
	else           reduce using rule 35
	"&&"           reduce using rule 35
	"||"           reduce using rule 35
	'+'            reduce using rule 35
	'-'            reduce using rule 35
	'*'            reduce using rule 35
	'/'            reduce using rule 35
	'^'            reduce using rule 35
	"=="           reduce using rule 35
	">="           reduce using rule 35
	"<="           reduce using rule 35
	"/="           reduce using rule 35
	'>'            reduce using rule 35
	'<'            reduce using rule 35
	'('            reduce using rule 35
	')'            reduce using rule 35
	var            reduce using rule 35
	']'            reduce using rule 35
	':'            reduce using rule 35
	','            reduce using rule 35
	"++"           reduce using rule 35
	%eof           reduce using rule 35


State 27

	Expr -> var "::" . TypeExp '\n' var '=' Expr        (rule 5)

	Int            shift, and enter state 76
	Bool           shift, and enter state 77
	Float          shift, and enter state 78
	'('            shift, and enter state 79
	'['            shift, and enter state 80

	TypeExp        goto state 74
	PrimType       goto state 75

State 28

	Expr -> Expr . "==" Expr                            (rule 6)
	Expr -> Expr . ">=" Expr                            (rule 7)
	Expr -> Expr . "<=" Expr                            (rule 8)
	Expr -> Expr . "/=" Expr                            (rule 9)
	Expr -> Expr . '>' Expr                             (rule 10)
	Expr -> Expr . '<' Expr                             (rule 11)
	Expr -> Expr . "&&" Expr                            (rule 12)
	Expr -> Expr . "||" Expr                            (rule 13)
	Expr -> Expr . ':' Expr                             (rule 14)
	Expr -> Expr . "++" Expr                            (rule 15)
	Atom -> '(' Expr . ')'                              (rule 31)

	"&&"           shift, and enter state 41
	"||"           shift, and enter state 42
	"=="           shift, and enter state 43
	">="           shift, and enter state 44
	"<="           shift, and enter state 45
	"/="           shift, and enter state 46
	'>'            shift, and enter state 47
	'<'            shift, and enter state 48
	')'            shift, and enter state 73
	':'            shift, and enter state 49
	"++"           shift, and enter state 50


State 29

	Expr -> '(' '\\' . var "->" Expr ')' "::" TypeExp "->" TypeExp    (rule 3)

	var            shift, and enter state 72


State 30

	Juxt -> rem Atom . Atom                             (rule 28)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	'('            shift, and enter state 25
	var            shift, and enter state 26

	Atom           goto state 71

State 31

	Juxt -> quot Atom . Atom                            (rule 27)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	'('            shift, and enter state 25
	var            shift, and enter state 26

	Atom           goto state 70

State 32

	Juxt -> '-' Atom .                                  (rule 29)

	int            reduce using rule 29
	float          reduce using rule 29
	bool           reduce using rule 29
	in             reduce using rule 29
	then           reduce using rule 29
	else           reduce using rule 29
	"&&"           reduce using rule 29
	"||"           reduce using rule 29
	'+'            reduce using rule 29
	'-'            reduce using rule 29
	'*'            reduce using rule 29
	'/'            reduce using rule 29
	'^'            reduce using rule 29
	"=="           reduce using rule 29
	">="           reduce using rule 29
	"<="           reduce using rule 29
	"/="           reduce using rule 29
	'>'            reduce using rule 29
	'<'            reduce using rule 29
	'('            reduce using rule 29
	')'            reduce using rule 29
	var            reduce using rule 29
	':'            reduce using rule 29
	"++"           reduce using rule 29
	%eof           reduce using rule 29


State 33

	Expr -> if Expr . then Expr else Expr               (rule 4)
	Expr -> Expr . "==" Expr                            (rule 6)
	Expr -> Expr . ">=" Expr                            (rule 7)
	Expr -> Expr . "<=" Expr                            (rule 8)
	Expr -> Expr . "/=" Expr                            (rule 9)
	Expr -> Expr . '>' Expr                             (rule 10)
	Expr -> Expr . '<' Expr                             (rule 11)
	Expr -> Expr . "&&" Expr                            (rule 12)
	Expr -> Expr . "||" Expr                            (rule 13)
	Expr -> Expr . ':' Expr                             (rule 14)
	Expr -> Expr . "++" Expr                            (rule 15)

	then           shift, and enter state 69
	"&&"           shift, and enter state 41
	"||"           shift, and enter state 42
	"=="           shift, and enter state 43
	">="           shift, and enter state 44
	"<="           shift, and enter state 45
	"/="           shift, and enter state 46
	'>'            shift, and enter state 47
	'<'            shift, and enter state 48
	':'            shift, and enter state 49
	"++"           shift, and enter state 50


State 34

	Expr -> letrec var . '=' Expr in Expr               (rule 2)

	'='            shift, and enter state 68


State 35

	Juxt -> Juxt Atom .                                 (rule 26)

	int            reduce using rule 26
	float          reduce using rule 26
	bool           reduce using rule 26
	in             reduce using rule 26
	then           reduce using rule 26
	else           reduce using rule 26
	"&&"           reduce using rule 26
	"||"           reduce using rule 26
	'+'            reduce using rule 26
	'-'            reduce using rule 26
	'*'            reduce using rule 26
	'/'            reduce using rule 26
	'^'            reduce using rule 26
	"=="           reduce using rule 26
	">="           reduce using rule 26
	"<="           reduce using rule 26
	"/="           reduce using rule 26
	'>'            reduce using rule 26
	'<'            reduce using rule 26
	'('            reduce using rule 26
	')'            reduce using rule 26
	var            reduce using rule 26
	':'            reduce using rule 26
	"++"           reduce using rule 26
	%eof           reduce using rule 26


State 36

	Form -> Form '+' . Form                             (rule 20)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	'-'            shift, and enter state 13
	quot           shift, and enter state 14
	rem            shift, and enter state 15
	'('            shift, and enter state 25
	var            shift, and enter state 26

	Form           goto state 67
	Juxt           goto state 5
	Atom           goto state 6

State 37

	Form -> Form '-' . Form                             (rule 21)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	'-'            shift, and enter state 13
	quot           shift, and enter state 14
	rem            shift, and enter state 15
	'('            shift, and enter state 25
	var            shift, and enter state 26

	Form           goto state 66
	Juxt           goto state 5
	Atom           goto state 6

State 38

	Form -> Form '*' . Form                             (rule 22)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	'-'            shift, and enter state 13
	quot           shift, and enter state 14
	rem            shift, and enter state 15
	'('            shift, and enter state 25
	var            shift, and enter state 26

	Form           goto state 65
	Juxt           goto state 5
	Atom           goto state 6

State 39

	Form -> Form '/' . Form                             (rule 23)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	'-'            shift, and enter state 13
	quot           shift, and enter state 14
	rem            shift, and enter state 15
	'('            shift, and enter state 25
	var            shift, and enter state 26

	Form           goto state 64
	Juxt           goto state 5
	Atom           goto state 6

State 40

	Form -> Form '^' . Form                             (rule 24)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	'-'            shift, and enter state 13
	quot           shift, and enter state 14
	rem            shift, and enter state 15
	'('            shift, and enter state 25
	var            shift, and enter state 26

	Form           goto state 63
	Juxt           goto state 5
	Atom           goto state 6

State 41

	Expr -> Expr "&&" . Expr                            (rule 12)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	let            shift, and enter state 2
	letrec         shift, and enter state 11
	if             shift, and enter state 12
	'-'            shift, and enter state 13
	quot           shift, and enter state 14
	rem            shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	'['            shift, and enter state 18
	hd             shift, and enter state 19
	tl             shift, and enter state 20

	Expr           goto state 62
	Form           goto state 4
	Juxt           goto state 5
	Atom           goto state 6
	List           goto state 7

State 42

	Expr -> Expr "||" . Expr                            (rule 13)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	let            shift, and enter state 2
	letrec         shift, and enter state 11
	if             shift, and enter state 12
	'-'            shift, and enter state 13
	quot           shift, and enter state 14
	rem            shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	'['            shift, and enter state 18
	hd             shift, and enter state 19
	tl             shift, and enter state 20

	Expr           goto state 61
	Form           goto state 4
	Juxt           goto state 5
	Atom           goto state 6
	List           goto state 7

State 43

	Expr -> Expr "==" . Expr                            (rule 6)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	let            shift, and enter state 2
	letrec         shift, and enter state 11
	if             shift, and enter state 12
	'-'            shift, and enter state 13
	quot           shift, and enter state 14
	rem            shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	'['            shift, and enter state 18
	hd             shift, and enter state 19
	tl             shift, and enter state 20

	Expr           goto state 60
	Form           goto state 4
	Juxt           goto state 5
	Atom           goto state 6
	List           goto state 7

State 44

	Expr -> Expr ">=" . Expr                            (rule 7)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	let            shift, and enter state 2
	letrec         shift, and enter state 11
	if             shift, and enter state 12
	'-'            shift, and enter state 13
	quot           shift, and enter state 14
	rem            shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	'['            shift, and enter state 18
	hd             shift, and enter state 19
	tl             shift, and enter state 20

	Expr           goto state 59
	Form           goto state 4
	Juxt           goto state 5
	Atom           goto state 6
	List           goto state 7

State 45

	Expr -> Expr "<=" . Expr                            (rule 8)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	let            shift, and enter state 2
	letrec         shift, and enter state 11
	if             shift, and enter state 12
	'-'            shift, and enter state 13
	quot           shift, and enter state 14
	rem            shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	'['            shift, and enter state 18
	hd             shift, and enter state 19
	tl             shift, and enter state 20

	Expr           goto state 58
	Form           goto state 4
	Juxt           goto state 5
	Atom           goto state 6
	List           goto state 7

State 46

	Expr -> Expr "/=" . Expr                            (rule 9)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	let            shift, and enter state 2
	letrec         shift, and enter state 11
	if             shift, and enter state 12
	'-'            shift, and enter state 13
	quot           shift, and enter state 14
	rem            shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	'['            shift, and enter state 18
	hd             shift, and enter state 19
	tl             shift, and enter state 20

	Expr           goto state 57
	Form           goto state 4
	Juxt           goto state 5
	Atom           goto state 6
	List           goto state 7

State 47

	Expr -> Expr '>' . Expr                             (rule 10)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	let            shift, and enter state 2
	letrec         shift, and enter state 11
	if             shift, and enter state 12
	'-'            shift, and enter state 13
	quot           shift, and enter state 14
	rem            shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	'['            shift, and enter state 18
	hd             shift, and enter state 19
	tl             shift, and enter state 20

	Expr           goto state 56
	Form           goto state 4
	Juxt           goto state 5
	Atom           goto state 6
	List           goto state 7

State 48

	Expr -> Expr '<' . Expr                             (rule 11)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	let            shift, and enter state 2
	letrec         shift, and enter state 11
	if             shift, and enter state 12
	'-'            shift, and enter state 13
	quot           shift, and enter state 14
	rem            shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	'['            shift, and enter state 18
	hd             shift, and enter state 19
	tl             shift, and enter state 20

	Expr           goto state 55
	Form           goto state 4
	Juxt           goto state 5
	Atom           goto state 6
	List           goto state 7

State 49

	Expr -> Expr ':' . Expr                             (rule 14)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	let            shift, and enter state 2
	letrec         shift, and enter state 11
	if             shift, and enter state 12
	'-'            shift, and enter state 13
	quot           shift, and enter state 14
	rem            shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	'['            shift, and enter state 18
	hd             shift, and enter state 19
	tl             shift, and enter state 20
